Resources/Courses: Padding for long description overflow (fixes #6632)

--- a/src/app/resources/resources.scss
+++ b/src/app/resources/resources.scss
@@ -4,6 +4,7 @@ $toolbar-height: 25vh;
 $label-height: 1rem;
 .content {
   margin-top: 0.5rem;
+  padding: 0.5rem;
 }
 .resources-list {
   /* Column Widths */
